# pyphylab

./: .gitignore  Cargo.toml  README.md  pyproject.toml  recipe.yaml
src/phylab/: dual.rs  lib.rs  linalg.rs  pyutils.rs  tensor.rs  tensor2.rs  tensor_traits.rs  utils.rs
src/phylab/algebra/: field.rs  group.rs  mod.rs  ops.rs  unary.rs
src/rberga06/phylab/: __init__.py  _lazy.py  _lib.pyi  _tensor.pyi  _tensor_numpy.py  bernoulli.py  bins.py  constants.py  data.py  dataset.py  distribution.py  measure.py  normal.py  poisson.py  range.py  stats.py  sympy_utils.py  uncertainties.py
src/rberga06/phylab/manim/: __init__.py  hist.py
src/rberga06/phylab/prob/: __init__.py  abc.py
tests/: test_datum.py  test_poisson.py  test_range.py
