[project]
name = "rberga06-phylab"
version = "1.0.0a0"
description = "A small Python library for random daily use in the Physics laboratory"
authors = [
    {name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
rberga06-phylab = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
sympy = ">=1.12.1,<1.13"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.0,<7.3"
