[project]
name = "rberga06-phylab"
version = "0.0.1.dev0"
description = "A small Python library for random daily use in the Physics laboratory"
authors = [{name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"}]
requires-python = ">= 3.12"
dependencies = []
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
pyphylab = { path = ".", editable = true }

[tool.pixi.tasks]
