[project]
name = "rberga06-phylab"
version = "0.0.1.dev2"
description = "A small Python library for random daily use in the Physics laboratory"
authors = [{name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"}]
requires-python = ">= 3.12"
dependencies = [
    "numpy", "numpy-typing", "typing-extensions"
]
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src"] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "rberga06.phylab._lib"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                                 # but you can add a prefix to nest it inside of a Python package.
# path = "Cargo.toml"            # Default value, can be omitted
# binding = "PyO3"               # Default value, can be omitted

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
rberga06-phylab = { path = ".", editable = true }

[tool.pixi.tasks]
